tests/compile-fail/boundless-lifetimes/vec.stderr
error[E0107]: wrong number of lifetime arguments: expected 0, found 1
 --> $DIR/vec.rs:5:28
  |
5 |     let bad: NonEmptySlice<'static, _> = vec.as_nonempty_slice();
  |                            ^^^^^^^ unexpected lifetime argument

error[E0599]: no method named `as_nonempty_slice` found for struct `oom::NonEmptyVec<u8>` in the current scope
 --> $DIR/vec.rs:5:46
  |
5 |     let bad: NonEmptySlice<'static, _> = vec.as_nonempty_slice();
  |                                              ^^^^^^^^^^^^^^^^^ method not found in `oom::NonEmptyVec<u8>`
